# pocket_helper_poetry

./: README.md  pyproject.toml
pocket_helper_poetry/: requirements.txt  setup.py
pocket_helper_poetry/src/: address_book_lib.py  main.py
pocket_helper_poetry/src/classes/: address.py  birthday.py  email.py  name.py  phone.py  record.py  record_notes.py
