[tool.poetry]
name = "pocket-helper-poetry"
version = "0.1.0"
description = ""
authors = ["Vlad <vladyslav.pasko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
